--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_sticky_header: ^0.6.0
   http: ^1.1.0
+  flutter_otp_text_field: ^1.1.1
+  get: ^4.6.6
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,8 +32,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/icons8-google-480.svg
 
   fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+
     - family: Arvo
       fonts:
         - asset: assets/fonts/Arvo-Regular.ttf
