--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
