--- a/baticraft/.gitignore
+++ b/baticraft/.gitignore
@@ -41,3 +41,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+firebase_options.dart
+google-services.json
+GoogleService-info.plist
+firebase_app_id_file.json
+Info.plist
+AndroidManifest.xml
