--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -9,6 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.25.4
+  hydrated_bloc: ^9.0.0
+  intl: ^0.17.0
+  path_provider: ^2.0.9
+  equatable: ^2.0.3
+  firebase_auth: ^4.17.4
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^4.15.5
+  firebase_storage: ^11.6.7
+  firebase_messaging: ^14.7.17
+  provider: ^6.1.1
 
   flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.9
@@ -21,7 +32,6 @@ dependencies:
   get: ^4.6.6
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
-  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
