--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.2.5
   shimmer: ^3.0.0
-  image_picker: ^0.8.3
+  image_picker: ^0.8.3+3
 
 dev_dependencies:
   flutter_test:
