--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   hydrated_bloc: ^9.0.0
-  intl: ^0.17.0
+  intl: 0.18.1
   path_provider: ^2.0.9
   equatable: ^2.0.3
   google_sign_in: ^6.2.1
@@ -30,8 +30,7 @@ dependencies:
   url_launcher: ^6.2.5
   shimmer: ^3.0.0
   image_picker: ^0.8.3+3
-  flutter_date_picker: ^0.1.9
-
+  flutter_date_pickers: ^0.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
