--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shimmer: ^3.0.0
   image_picker: ^0.8.3+3
   flutter_date_pickers: ^0.4.2
+  excel: 4.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
