--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   image_picker: ^0.8.3+3
   flutter_date_pickers: ^0.4.2
   excel: 4.0.2
+  email_otp: ^2.1.2
+  animated_splash_screen: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
