--- a/baticraft/pubspec.yaml
+++ b/baticraft/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   pdf: ^3.10.8
   printing: ^5.12.0
   open_file: ^3.3.2
+  loading_animation_widget: ^1.2.1
   
 
 dev_dependencies:
